# dproxy/controllers/versionlock.py
@@ -1,3 +1,4 @@
+import base64
 import requests
 from flask import request
 from dproxy.util.http_helper import get_http
@@ -5,14 +6,28 @@ from dproxy.util.http_helper import get_http
 
 def post_versionlock():
     data = request.get_json()
-    r = requests.post(f"{data['url']}/versionlock", json=data)
-    resp = r.json()
-    return resp, 201
+    try:
+        if "url" in data:
+            url = base64.b64decode(data["url"])
+            r = requests.post(f"{url}/versionlock", json=data)
+            resp = r.json()
+            return resp, 201
+        else:
+            response = {
+                "status": "failed",
+                "message": "Unable to find Base64 encoded client url."
+            }
+            return response, 409
+    except Exception as e:
+        raise Exception(f"Unable to Post versionlock: {e}")
 
 
 def get_versionlock(url):
-    url = url.decode("ascii")
-    http = get_http
-    r = http.get(f"{url}/versionlock", json=data)
-    resp = r.json()
-    return resp, 201
+    try:
+        url = base64.b64decode(url)
+        http = get_http
+        r = http.get(f"{url}/versionlock", json=data)
+        resp = r.json()
+        return resp, 201
+    except Exception as e:
+        raise Exception(f"Unable to Get versionlock: {e}")
